add seat capacity and update user - booking documentation
